--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ DB_HOST='localhost'
 DB_PORT='3306'
 DB_NAME='salon_booking_db'
 DB_USER='root'
-DB_PASSWORD=''
+DB_PASSWORD='S#yCBDq3j5p8Hn4'
 PORT='5000'
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_USER='contact@graphinitylab.com'
