--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST='localhost'
 DB_PORT='3306'
-DB_NAME='salon_booking_db'
+DB_NAME='salon_booking_db_cleaned'
 DB_USER='root'
 DB_PASSWORD=''
 PORT='5000'
